[package]
name = "tachka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.29.4"
wayland-protocols = { version = "0.29.4", features = ["client", "staging_protocols", "unstable_protocols"] }
x11 = { version = "2.19.1", features = ["xlib"] }
